# getratebot

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  run.sh
src/: ContriesStorage.cpp  ContriesStorage.hpp  CurrencyConverterApi.cpp  CurrencyConverterApi.hpp  CurrencyRatesService.cpp  CurrencyRatesService.hpp  HttpRequest.hpp  Rate.hpp  main.cpp
src/services/: CurrencyConverterApi.cpp  CurrencyConverterApi.hpp  HttpRequest.cpp  HttpRequest.hpp  main.cpp
src/types/: Countries.hpp  Country.cpp  Country.hpp  Rate.hpp
src/vendors/: Lambda.cpp  Log.hpp  Logger.cpp  Logger.hpp  Strings.hpp
